tests/NormalTests/paczka1/fuzzy1/83780518.err
Error in line 1: SlQUt3Enn S776 58,9
Error in line 10: S776 S987 49,5
Error in line 12: SlQUt3Enn S28 24,6
